--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -25,7 +25,7 @@
             TOTAL:
           </th>
           <th>
-            <%= cart_subtotal_cents / 100.0 %>
+            <%=humanized_money_with_symbol cart_subtotal_cents / 100.0 %>
           </th>
         </tr>
       </tfoot>
@@ -34,7 +34,7 @@
 
   <div class="row">
     <div class="col-xs-12">
-      <%= form_tag orders_path do %>
+      <%=  form_tag orders_path do %>
         <script
           src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
