--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,5 +1,6 @@
 <section class="cart-show">
 
+<% if enhanced_cart.length > 0 %>
   <header class="page-header">
     <h1>My Cart</h1>
   </header>
@@ -48,5 +49,10 @@
       <% end %>
     </div>
   </div>
+  <% else %>
+  <p> The cart is empty </p>
+  <a href="/">home page</a>
 
+
+  <% end %>
 </section>
